se modifica section quinesomos

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <!-- grillas de texto -->
 
-<section id="quienesomos" class="grid text-white id">
+<section id="quienesomos" class="grid text-white id d-none d-lg-block">
   <div>
     <h2 id=titulo class="text-center mt-5" onclick="myFunction()" data-toggle="tooltip" data-bs-placement="right" title="!Pincha aqui!">¿QUIENES SOMOS?</h2>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -91,7 +91,7 @@
 
     <hr>
 
-    <div class="container text-center g-col-6 g-col-md-4 d-flex d-none d-lg-block">
+    <div class="container text-center g-col-6 g-col-md-4 d-flex">
         <div class="row mt-5">
           <div class="col-md-4">
             <div class="icons">
