se agrega un container a section quinesomos

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <!-- grillas de texto -->
 
-<section id="quienesomos" class="grid text-white id d-none d-lg-block">
+<section id="quienesomos" class="container grid text-white id d-none d-lg-block">
   <div>
     <h2 id=titulo class="text-center mt-5" onclick="myFunction()" data-toggle="tooltip" data-bs-placement="right" title="!Pincha aqui!">¿QUIENES SOMOS?</h2>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
